# librsync

./: CMakeLists.txt  README.md
src/: patch.c  rdiff.c  search.c
tests/: CMakeLists.txt
